# Programming_fpga

./: readme.md
FSM examples/: 1 - fsm1_ares.v  2 - fsm1_res.v  3 - fsm2_ares.v  4 - fsm2_res.v  5 - combination encoding fsm.v  6 - one-hot encoding fsm.v
M1_example/: .gitignore  CMakeLists.txt  GOWIN_M1_flash_burn.ld  GOWIN_M1_flash_xip.ld  base_setup.cmake
M1_example/fpga_prj/: cpu_test_1.gprj
M1_example/fpga_prj/src/: cpu_test_1.cst  cpu_test_1.sdc  top.v
M1_example/fpga_prj/src/gowin_empu_m1/: gowin_empu_m1.ipc
M1_example/fpga_prj/src/gowin_empu_m1/temp/gw_empu_m1/: ahb_option_defs.v  cm1_option_defs.v  gowin_empu_m1.vg  gowin_empu_m1_syn.rpt.html  gowin_empu_m1_syn_resource.html  gowin_empu_m1_syn_rsc.xml  gowin_empu_m1_tmp.v  gw_empu_m1.prj
M1_example/fpga_prj/src/gowin_rpll/: gowin_rpll.ipc  gowin_rpll.mod  gowin_rpll.v  gowin_rpll_tmp.v
M1_example/fpga_prj/src/riscv_ae250/temp/Riscvae250/: Riscvae250.prj  define.v
M1_example/libraries/cmsis/cm1/device_support/: GOWIN_M1.h  GOWIN_M1_conf.h  system_GOWIN_M1.c  system_GOWIN_M1.h
M1_example/libraries/drivers/inc/: GOWIN_M1_can.h  GOWIN_M1_ddr3.h  GOWIN_M1_dualtimer.h  GOWIN_M1_ethernet.h  GOWIN_M1_gpio.h  GOWIN_M1_i2c.h  GOWIN_M1_misc.h  GOWIN_M1_psram.h  GOWIN_M1_qspi_flash.h  GOWIN_M1_rtc.h  GOWIN_M1_sdcard.h  GOWIN_M1_spi.h  GOWIN_M1_spi_flash.h  GOWIN_M1_timer.h  GOWIN_M1_trng.h  GOWIN_M1_uart.h  GOWIN_M1_wdog.h
M1_example/libraries/drivers/src/: GOWIN_M1_can.c  GOWIN_M1_ddr3.c  GOWIN_M1_dualtimer.c  GOWIN_M1_ethernet.c  GOWIN_M1_gpio.c  GOWIN_M1_i2c.c  GOWIN_M1_misc.c  GOWIN_M1_psram.c  GOWIN_M1_qspi_flash.c  GOWIN_M1_rtc.c  GOWIN_M1_sdcard.c  GOWIN_M1_spi.c  GOWIN_M1_spi_flash.c  GOWIN_M1_timer.c  GOWIN_M1_trng.c  GOWIN_M1_uart.c  GOWIN_M1_wdog.c
M1_example/src/: main.c
M1_example/startup/: startup_GOWIN_M1.s
M1_example/tools/: merge_bit.bat
ModelSim_example/: .gitignore  ReadMe.md  top_tb.v
ModelSim_example/gw_prj/: modelsim.gprj
ModelSim_example/gw_prj/src/: modelsim.cst  top.v
ModelSim_example/gw_prj/src/gowin_rpll/: gowin_rpll.ipc  gowin_rpll.mod  gowin_rpll_tmp.v
ModelSim_example/gw_prj/src/integer_multiplier/: integer_multiplier_tmp.v
ModelSim_example/gw_prj/src/integer_multiplier/temp/integer_multiplier/: integer_multiplier.prj  integer_multiplier_syn_rsc.xml
counter_tb_example/: counter.v  counter_tb.v
iverilog_example/: .gitignore  compile_files.txt
iverilog_example copy/: Readme.md  top_tb.v
iverilog_example copy/gw_prj/src/: top.v
iverilog_example copy/gw_prj/src/gowin_rpll/: gowin_rpll.v
iverilog_example copy/gw_prj/src/integer_multiplier/: integer_multiplier.vo
iverilog_example copy/gw_prj/src/integer_multiplier/temp/integer_multiplier/: integer_multiplier.vg  parameter.vh
iverilog_example/gw_prj/: iverilog.gprj
iverilog_example/gw_prj/src/: top.v
iverilog_example/gw_prj/src/integer_multiplier/: integer_multiplier.ipc
iverilog_example/gw_prj/src/integer_multiplier/temp/integer_multiplier/: define.vh  integer_multiplier_syn.rpt.html  integer_multiplier_syn_resource.html
lab1/: Task.md  chip_7458.v  chip_7458_tb.v  full_add.v  full_add_3b.v  full_add_3b_tb.v  full_add_tb.v  part_1_dff_tb.v  part_1_top_module.v  part_2_dff_tb.v  part_2_top_module.v  part_3_add_tb.v  part_3_top_module.v  part_4_add_tb.v  part_4_top_module.v  part_5_add_tb.v  part_5_top_module.v
lab2/: Task.md  alu_top.v  alu_top_tb.v  file_reg_top.v  file_reg_top_tb.v  lut_top.v  lut_top_tb.v  part_1_dff_tb.v  part_1_top_module.v  part_2_dff_tb.v  part_2_top_module.v  part_3_add_tb.v  part_3_top_module.v  part_4_add_tb.v  part_4_top_module.v  ram_top.v  ram_top_tb.v  rom_top.v  rom_top_tb.v  sevenseg_top.v  sevenseg_top_tb.v  sync_top.v  sync_top_tb.v  wave.vcd
lab3/: .gitignore  ANALYSIS_REPORT.md  FSM_part_1.v  FSM_part_1_tb  FSM_part_1_tb.v  FSM_part_2.v  FSM_part_2_tb  FSM_part_2_tb.v  FSM_part_3.v  FSM_part_3_tb  FSM_part_3_tb.v  FSM_part_4.v  FSM_part_4_tb  FSM_part_4_tb.v  GTKWAVE_GUIDE.md  Makefile  README.md  Task.md  VERIFICATION_REPORT.md  advanced_timer.v  advanced_timer_final.v  advanced_timer_simple.v  advanced_timer_simple_tb  advanced_timer_simple_tb.v  advanced_timer_v2.v  advanced_timer_v2_tb  advanced_timer_v2_tb.v  counter_0_999.v  counter_0_999_tb  counter_0_999_tb.v  debug_delay_tb  debug_delay_tb.v  debug_timer_tb  debug_timer_tb.v  gtkwave.sh  part1_combinational.v  part2_combinational.v  part3_combinational.v  part4_sequential.v  part5_sequential.v  (+37 more)
lab4/: Task.md
lab5/: Task.md  UART.md
lab5/pages/: Tang Primer 20K - Sipeed Wiki.htm  Tang Primer 20K Dock Blink Led - Sipeed Wiki.htm
lab6/: Task.md
old/lab1/: chip_7458.v  chip_7458_tb.v  full_add.v  full_add_tb.v
old/lab2/: Task.md  part_3_add_tb.v  part_5_add_tb.v  part_5_top_module.v
old/lab3/: Task.md
old/lab4/: Task.md
old/lab5/: Task.md
old/lab5/pages/: Install IDE - Sipeed Wiki.htm
old/lab5/pages/Install IDE - Sipeed Wiki_files/: js  js_002
old/lab5/pages/Tang Primer 20K - Sipeed Wiki_files/: js
old/lab5/pages/Tang Primer 20K Dock Blink Led - Sipeed Wiki_files/: js_002
old/lab6/: Task.md
test/: m_not.v  m_not_tb.v  outm_not_tb.v.out
